# acclaud

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  acclaud  acclaud.py  claudit  demo.tape  import.sh  monthly-report.py  pyproject.toml  report.sh  sankey.py  setup.py
acclaud/: __init__.py  cli.py  config.py  helpers.py  import_csv.py  report.py  reports.py  sankey.py  setup.py  simplefin.py
acclaud/sample_budget/: accounts.journal  budget.journal  config.json  transactions.journal
tests/: test_acclaud.py
