[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "acclaud"
version = "0.1.0"
description = "AI-powered personal finance tracking with hledger and Claude"
requires-python = ">=3.9"
dependencies = [
    "plotly",
    "kaleido",
    "python-dotenv",
]

[tool.setuptools]
py-modules = ["acclaud"]

[project.scripts]
acclaud = "acclaud:main"
